add about, contact pagesm small fixes

--- a/contact.html
+++ b/contact.html
@@ -43,44 +43,92 @@
 		</div>
 	</div>
 </header>		<div class="content-wrapper">
-			<section class="about">
+			<section class="contact">
 				<div class="container">
 					<div class="breadcrumbs">
 						<a href="">Home</a>
 						<a href="" class="cur-page">Comparison</a>
 					</div>
-					<div class="wrapper">
-						<h1>About Bus Trade Center</h1>
-						<h2>We buy, and sell buses.</h2>
-						<h3 class="title">
-							Since 1997, Bus Trade Center has helped over 20,000 Buses find new homes by bringing together
-							owners and sellers in a simple and efficient way. In our database, you who are looking for a bus
-							can quickly find the right vehicle for you and also add guards for objects that we do not currently
-							have for sale.
-						</h3>
-						<div class="bottom-content">
-							<div class="text-block">
-								<h3>Our warehouse vehicles are located at the parking lots in Järfälla and Kungsängen.</h3>
-								<h4>We offer, among other things:</h4>
-								<ul class="list-bg">
-									<li>Purchase of buses, regardless of age and condition, as long as they are
-										drivable.</li>
-									<li>Sales assignment without requirements for exclusive rights with free marketing
-										in Sweden
-										and Europe's largest
-										advertising markets.</li>
-									<li>Agreed car deals in the future - in case it would be preferable for you.</li>
-									<li>Flexibility and accommodating when it comes to finding flexible ways to sell
-										buse.</li>
-									<li>Free surveillance & search buses according to the customer's specification and
-										needs.
-									</li>
-								</ul>
-							</div>
-							<div class="img-wrapper">
-								<img src="/img/about-bus.png" alt="bus">
+					<div class="prew-wrapper">
+						<div class="text-block">
+							<h1>Contact Us</h1>
+							<h4>Bus Trade Center are leaders in Sweden in sales of used buses.</h4>
+						</div>
+						<div class="img-wrapper">
+							<img src="/img/contact-img.png" alt="contact-img">
+						</div>
+					</div>
+					<div class="contact-info">
+						<div class="location">
+							<h4></h4>
+							<div>
+								<img src="/img/icons/contact/location.svg" alt="location">
+								<a href="#">Bus Trade Center AB Girovägen 1 175 62 Järfälla Sweden</a>
 							</div>
 						</div>
+						<div class="selller">
+							<h4>Göran Gannbäck</h4>
+							<p>Seller</p>
+							<div>
+								<img src="/img/icons/contact/mail.svg" alt="mail">
+								<a href="#">goran@bustradecenter.com</a>
+							</div>
+							<div>
+								<img src="/img/icons/contact/phone.svg" alt="phone">
+								<a href="#">+ (46) 730-854-102</a>
+							</div>
+							<div>
+								<img src="/img/icons/contact/whatsapp.svg" alt="whatsapp">
+								<a href="#">+ (46) 730-854-102</a>
+							</div>
+						</div>
+						<div class="owner">
+							<h4>Artur Zemets</h4>
+							<p>owner</p>
+							<div>
+								<img src="/img/icons/contact/mail.svg" alt="mail">
+								<a href="#">info@bustradecenter.com</a>
+							</div>
+							<div>
+								<img src="/img/icons/contact/phone.svg" alt="phone">
+								<a href="#">+ (46) 707-562-040</a>
+							</div>
+							<div>
+								<img src="/img/icons/contact/whatsapp.svg" alt="whatsapp">
+								<a href="#">+ (46) 707-562-040</a>
+							</div>
+						</div>
+
+					</div>
+					<div class="form-wrapper">
+						<form action="">
+							<h2>Get in touch</h2>
+							<div class="group-wrapper">
+								<div class="group control">
+									<label for="search">Name</label>
+									<input id="search" type="text" placeholder="Enter Name">
+								</div>
+								<div class="group control">
+									<label for="search">E-mail</label>
+									<input id="search" type="text" placeholder="bts@info.com">
+								</div>
+								<div class="group control">
+									<label for="search">Phone number</label>
+									<input id="search" type="text" placeholder="+ (46 7) _ _ _ - _ _ _ - _ _">
+								</div>
+							</div>
+							<div class="group-wrapper group textarea">
+								<label for="search">Message</label>
+								<textarea placeholder="Enter Message"></textarea>
+							</div>
+							<div class="group-wrapper">
+								<div class="group check">
+									<input class="checkbox" type="checkbox" id="Accept">
+									<label class="form-label" for="Accept">Accept the <a href="#">Privacy Policy</a></label>
+								</div>
+								<button class="btn blue">Send</button>
+							</div>
+						</form>
 					</div>
 				</div>
 			</section>
