--- a/product.html
+++ b/product.html
@@ -46,6 +46,18 @@
 </header>
     
 		<div class="content-wrapper">
+      <div class="container">
+					<div class="breadcrumbs">
+						<a href="">Home</a>
+						<a href="" class="cur-page">Comparison</a>
+					</div> 
+          <div class="content">
+            <div></div>
+            <div><h1>Products</h1></div>
+            <div>123</div>
+            <div>123</div>              
+          </div>
+      </div>
 
 		</div>
 <footer class="footer">
