--- a/product.html
+++ b/product.html
@@ -51,11 +51,130 @@
 						<a href="">Home</a>
 						<a href="" class="cur-page">Comparison</a>
 					</div> 
-          <div class="content">
+          <div class="products-content">
             <div></div>
             <div><h1>Products</h1></div>
+            <div>
+              <div>
+                <h3>Filters</h3>
+                <a href="">Xlear</a>                
+              </div>
+              <div class="group control mb-4">
+                <label for="">Search</label>
+                <input type="text" placeholder="Free text">
+              </div>
+              <div class="group select mb-4">
+                <label for="single">Category</label>
+                <select id="slim-select" class="slim-select">
+                  <option value="value 1">Value 1</option>
+                  <option value="value 2">Value 2</option>
+                  <option value="value 3">Value 333333333333 444444 5666666666</option>
+                </select>
+              </div> 
+              <div class="group select mb-4">
+                <label for="single">Brand</label>
+                <select id="slim-select" class="slim-select">
+                  <option value="value 1">Value 1</option>
+                  <option value="value 2">Value 2</option>
+                  <option value="value 3">Value 333333333333 444444 5666666666</option>
+                </select>
+              </div> 
+              <div class="group select mb-4">
+                <label for="single">Model</label>
+                <select id="slim-select" class="slim-select">
+                  <option value="value 1">Value 1</option>
+                  <option value="value 2">Value 2</option>
+                  <option value="value 3">Value 333333333333 444444 5666666666</option>
+                </select>
+              </div>
+              <div class="group select mb-4">
+                <label for="single">Year</label>
+                <div class="d-flex">
+                  <select id="slim-select" class="slim-select">
+                    <option value="value 1">Value 1</option>
+                    <option value="value 2">Value 2</option>
+                    <option value="value 3">Value 333333333333 444444 5666666666</option>
+                  </select>
+                  <select id="slim-select" class="slim-select">
+                    <option value="value 1">Value 1</option>
+                    <option value="value 2">Value 2</option>
+                    <option value="value 3">Value 333333333333 444444 5666666666</option>
+                  </select>                                    
+                </div>
+              </div>
+              <div class="group select mb-4">
+                
+              </div>                                                        
+            </div>
+            <div>
+              <span>67 Products</span>
+              <div>
+                <a href=""></a>
+                <a href=""></a>
+              </div>
+            </div>
             <div>123</div>
-            <div>123</div>              
+            <div>
+              <ul class="product_list d-none">
+                <li>
+                  <div class="product-card">
+                      <div class="swiper card-images new">
+                        <div class="swiper-wrapper">
+                          <div class="swiper-slide"><img src="/img/bus-img.png" alt=""></div>
+                          <div class="swiper-slide"><img src="/img/bus-img.png" alt=""></div>
+                          <div class="swiper-slide"><img src="/img/bus-img.png" alt=""></div>
+                        </div>
+                        <div class="swiper-button-next swiper-image"></div>
+                        <div class="swiper-button-prev swiper-image"></div>
+                        <div class="swiper-pagination swiper-image"></div>
+                      </div>
+
+                      <div class="bottom-content">
+                        <h4 class="name">VOLVO 9500H B8R 4x</h4>
+                        <div class="block-wrapper">
+                          <div class="wrapper-item">
+                            <p>Year:</p>
+                            <span>2010</span>
+                          </div>
+                          <div class="wrapper-item">
+                            <p>Emission:</p>
+                            <span>Euro 5</span>
+                          </div>
+                          <div class="wrapper-item">
+                            <p>Mileage:</p>
+                            <span>974 175km</span>
+                          </div>
+                          <div class="wrapper-item">
+                            <p>Seats:</p>
+                            <span>50 places</span>
+                          </div>
+                        </div>
+                        <div class="block-wrapper">
+                          <h5 class="price">€ 113 050</h5>
+                          <button class="btn bordered">Details</button>
+                          <a href="#" class="img-wrapper">
+                            <img src="/img/icons/swiper/physics 1.svg" alt="">
+                            <div class="compare">
+                              <div> Compare with other </div>
+                            </div>
+                          </a>
+                        </div>
+                      </div>
+                    </div>
+                </li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+              </ul>
+            </div>              
           </div>
       </div>
 
