--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
 		<div class="wrapper">
 			<div class="form-block">
 				<form action="">
-					<div class="group select d-flex flex-column mb-4">
+					<div class="group select mb-4">
 						<label for="single">Category</label>
-						<select id="slim-select">
+						<select id="slim-select" class="slim-select">
 							<option value="value 1">Value 1</option>
 							<option value="value 2">Value 2</option>
 							<option value="value 3">Value 333333333333 444444 5666666666</option>
@@ -534,5 +534,4 @@
 		},
 	});
 </script></body>
-
 </html>
