--- a/index.html
+++ b/index.html
@@ -59,19 +59,15 @@
 					<div>
 						<div class="group">
 							<label for="">Year</label>
-							<div class="range-slider js-range" data-noui-min="1997" data-noui-max="2022" data-noui-step="1"></div>
+							<div class="range-slider js-range" data-noui-min="1997" data-noui-max="2022" data-noui-step="1">
+							</div>
 						</div>
 						<div class="group">
 							<label for="">Price (€)</label>
-							<div class="range-slider js-range" data-noui-min="3000" data-noui-max="50000" data-noui-step="100"></div>
-						</div>	
-								
+							<div class="range-slider js-range" data-noui-min="3000" data-noui-max="50000" data-noui-step="100">
+							</div>
+						</div>
 					</div>
-					<!-- <div class="group check">
-						<input class="checkbox" type="checkbox" id="">
-						<label class="form-label" for="">Diesel</label>
-					</div> -->
-
 					<div class="group control">
 						<label for="search">Search</label>
 						<input id="search" type="text" placeholder="Free text">
@@ -506,15 +502,36 @@
 <script src="js/main.js"></script>
 
 
-
 <script>
 	var swiper = new Swiper(".cards-global", {
-		slidesPerView: 4,
-		slidesPerGroup: 4,
-		spaceBetween: 40,
+		slidesPerView: 1,
+		spaceBetween: 20,
+		slidesPerGroup: 1,
 		navigation: {
 			nextEl: ".swiper-button-next.swiper-global",
 			prevEl: ".swiper-button-prev.swiper-global"
+		},
+		breakpoints: {
+			575: {
+				slidesPerView: 2,
+				spaceBetween: 20,
+				slidesPerGroup: 2,
+			},
+			767: {
+				slidesPerView: 2,
+				spaceBetween: 20,
+				slidesPerGroup: 2,
+			},
+			991: {
+				slidesPerView: 3,
+				spaceBetween: 30,
+				slidesPerGroup: 3,
+			},
+			1200: {
+				slidesPerView: 4,
+				spaceBetween: 40,
+				slidesPerGroup: 4,
+			}
 		}
 	});
 
