--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css" />
-	<link href="https://cdnjs.cloudflare.com/ajax/libs/slim-select/1.27.1/slimselect.min.css" rel="stylesheet"></link>
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/slim-select/1.27.1/slimselect.min.css" rel="stylesheet">
+	</link>
 	<link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -48,7 +49,7 @@
 		<div class="wrapper">
 			<div class="form-block">
 				<form action="">
-					<div class="group select d-flex flex-column mb-4">
+					<div class="group select mb-4">
 						<label for="single">Category</label>
 						<select id="slim-select">
 							<option value="value 1">Value 1</option>
@@ -451,7 +452,7 @@
 		<div class="swiper-button-next swiper-global"></div>
 		<div class="swiper-button-prev swiper-global"></div>
 	</div>
-</section><section class="autosearch">
+</section><section class="autosearch-block">
    <div class="container">
       <div class="wrapper">
          <p>Sorry, right now we dont have such vehicle for sale. <br>
