--- a/autosearch.html
+++ b/autosearch.html
@@ -100,23 +100,21 @@
 							<div class="group range">
 								<label for="">Year</label>
 								<div class="value-wrapper">
-									<input class="slider-value-min" type="text">
-									<!-- <div class="group select">
+									<div class="group select">
 										<select class="slim-select slider-value-min" id="year">
-											<option value="value 1">1997</option>
-											<option value="value 2">1998</option>
-											<option value="value 3">1999</option>
+											<option value="1997">1997</option>
+											<option value="1998">1998</option>
+											<option value="1999">1999</option>
 										</select>
-									</div> -->
+									</div>
 									<span>-</span>
-									<!-- <div class="group select">
+									<div class="group select">
 										<select class="slim-select slider-value-max" id="year">
 											<option value="1997">1997</option>
 											<option value="1998">1998</option>
 											<option value="1999">1999</option>
 										</select>
-									</div> -->
-									<input class="slider-value-max" type="text">
+									</div>
 								</div>
 								<div class="range-slider js-range" data-noui-min="1997" data-noui-max="2022" data-noui-step="1">
 								</div>
