--- a/autosearch.html
+++ b/autosearch.html
@@ -247,7 +247,7 @@
 				slidesPerView: 4,
 				spaceBetween: 40,
 				slidesPerGroup: 4,
-			}
+			} 
 		}
 	});
 
@@ -266,6 +266,25 @@
 			clickable: true,
 		},
 	});
+
+let comparisonSlider = document.querySelectorAll('.comparison-cards');
+
+comparisonSlider.forEach((slider)=>{
+	var swiper = new Swiper(slider, {
+		paginationClickable: true,
+		slidesPerView: 3,
+		spaceBetween: 10,
+		allowTouchMove: false,
+		loop: false,
+    scrollbar: {
+      el: ".swiper-scrollbar",
+      hide: false,
+			draggable: true,
+    },
+	});	
+});
+
+
 </script></body>
 
 </html>
