product-full adaptive

--- a/product-full.html
+++ b/product-full.html
@@ -234,18 +234,20 @@
                      </div>
                      <div class="equipment">
                         <h3>Equipment</h3>
-                        <span>School Sign</span>
-                        <span>Alcolock</span>
-                        <span>KLIMA</span>
-                        <span>Extra heater</span>
-                        <span>3P Seatbelts</span>
-                        <span>ABS</span>
-                        <span>Thelma</span>
-                        <span>Handicap lift</span>
-                        <span>Cruise Control</span>
-                        <span>Seatbelts</span>
-                        <span>Curtains</span>
-                        <span>Reading Lights</span>
+                        <div>
+                           <span>School Sign</span>
+                           <span>Alcolock</span>
+                           <span>KLIMA</span>
+                           <span>Extra heater</span>
+                           <span>3P Seatbelts</span>
+                           <span>ABS</span>
+                           <span>Thelma</span>
+                           <span>Handicap lift</span>
+                           <span>Cruise Control</span>
+                           <span>Seatbelts</span>
+                           <span>Curtains</span>
+                           <span>Reading Lights</span>
+                        </div>
                      </div>
                   </div>
                </div>
@@ -425,6 +427,71 @@
                   <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
                      industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
                      and scrambled it to make a type specimen book.</p>
+               </div>
+               <div class="similar-buses">
+                  <div class="title-wrapper">
+                     <h2>Similar buses</h2>
+                     <div class="group select">
+                        <select class="slim-select" id="new">
+                           <option value="value 1">Value 1</option>
+                           <option value="value 2">Value 2</option>
+                           <option value="value 3">Value 333333333333 444444 5666666666</option>
+                        </select>
+                     </div>
+                  </div>
+                  <div class="bus-table">
+                     <div class="table-heder">
+                        <h5></h5>
+                        <h5>Brand</h5>
+                        <h5>Model</h5>
+                        <h5>Year</h5>
+                        <h5>Seats</h5>
+                        <h5>Mileage </h5>
+                        <h5>Price (€)</h5>
+                     </div>
+                     <div class="table-body">
+                        <div class="table-card">
+                           <div>
+                              <img src="/img/test-1.png" alt="">
+                           </div>
+                           <div>Scania</div>
+                           <div>BEULAS SPICA K400 IB NB EURO 5 // HANDICAP LIFT</div>
+                           <div>2010</div>
+                           <div>61</div>
+                           <div>974 175 km</div>
+                           <div>113 050</div>
+                        </div>
+                        <div class="table-card">
+                           <div>
+                              <img src="/img/test-1.png" alt="">
+                           </div>
+                           <div>Scania</div>
+                           <div>BEULAS SPICA K400 IB NB EURO 5 // HANDICAP LIFT</div>
+                           <div>2010</div>
+                           <div>61</div>
+                           <div>974 175 km</div>
+                           <div>113 050</div>
+                        </div>
+                        <div class="table-card">
+                           <div>
+                              <img src="/img/test-1.png" alt="">
+                           </div>
+                           <div>Scania</div>
+                           <div>BEULAS SPICA K400 IB NB EURO 5 // HANDICAP LIFT</div>
+                           <div>2010</div>
+                           <div>61</div>
+                           <div>974 175 km</div>
+                           <div>113 050</div>
+                        </div>
+                     </div>
+                  </div>
+                  <button class="btn bordered">Show more</button>
+               </div>
+               <div class="compare">
+                  <div>
+                     <img src="/img/icons/compare-figure.svg" alt="">
+                     <span>4</span>
+                  </div>
                </div>
             </div>
          </section>
