--- a/autosearch.html
+++ b/autosearch.html
@@ -265,23 +265,33 @@
 		},
 	});
 
-let comparisonSlider = document.querySelectorAll('.comparison-cards');
 
-comparisonSlider.forEach((slider)=>{
-	var swiper = new Swiper(slider, {
+	var comparisonCards = new Swiper('.comparison-cards', {
 		paginationClickable: true,
 		slidesPerView: 3,
-		spaceBetween: 10,
-		allowTouchMove: false,
+		spaceBetween: 0,
+		allowTouchMove: true,
 		loop: false,
     scrollbar: {
       el: ".swiper-scrollbar",
       hide: false,
 			draggable: true,
     },
-	});	
-});
+	});
 
+	var comparisonData = new Swiper('.comparison-data', {
+		paginationClickable: true,
+		slidesPerView: 3,
+		spaceBetween: 0,
+		allowTouchMove: true,
+		loop: false,
+	});	
+
+	comparisonCards.controller.control = this.comparisonData;
+	comparisonData.controller.control = this.comparisonCards;
+	
+
+	
 	var swiperSmall = new Swiper(".card-img-small", {
 		loop: true,
 		spaceBetween: 10,
