Delete  class compare from matrix

--- a/comparison.html
+++ b/comparison.html
@@ -59,7 +59,7 @@
 							<div><a href="">clear</a> </div>
 							<div><span>8 Products</span></div>
 							<div class="column-left">
-								<div class="matrix-head compare">
+								<div class="matrix-head">
 									<div class="item">
 										<a href="" class="add">
 											<img src="/img/icons/plus.svg" alt="">
@@ -96,7 +96,7 @@
 								</div>
 							</div>
 							<div class="column-right">
-								<div class="matrix-head compare">
+								<div class="matrix-head">
 									<div class="swiper comparison-cards">
 										<div class="swiper-wrapper">
 											<div class="swiper-slide">
