--- a/comparison.html
+++ b/comparison.html
@@ -52,9 +52,7 @@
 						<a href="" class="cur-page">Comparison</a>
 					</div> 
           <div class="comparison">
-						<div class="title">
-							<h2>Comparison</h2>
-						</div>
+						<h1>Comparison</h1>
 						<div class="matrix">
 							<div><a href="">clear</a> </div>
 							<div><span>8 Products</span></div>
@@ -117,10 +115,9 @@
 															<h5 class="price">€ 113 050</h5>
 															<button class="btn bordered">Details</button>
 															<a href="#" class="img-wrapper">
-																<img src="/img/icons/swiper/physics 1.svg" alt="">
-																<div class="compare">
-																	<div> Compare with other </div>
-																</div>
+																<svg width="16" height="18" fill="none">
+																	<use xlink:href="img/icons/icons.svg#trashcan"></use>
+																</svg> 
 															</a>
 														</div>
 													</div>
@@ -144,10 +141,9 @@
 															<h5 class="price">€ 113 050</h5>
 															<button class="btn bordered">Details</button>
 															<a href="#" class="img-wrapper">
-																<img src="/img/icons/swiper/physics 1.svg" alt="">
-																<div class="compare">
-																	<div> Compare with other </div>
-																</div>
+																<svg width="16" height="18" fill="none">
+																	<use xlink:href="img/icons/icons.svg#trashcan"></use>
+																</svg> 
 															</a>
 														</div>
 													</div>
@@ -171,10 +167,9 @@
 															<h5 class="price">€ 113 050</h5>
 															<button class="btn bordered">Details</button>
 															<a href="#" class="img-wrapper">
-																<img src="/img/icons/swiper/physics 1.svg" alt="">
-																<div class="compare">
-																	<div> Compare with other </div>
-																</div>
+																<svg width="16" height="18" fill="none">
+																	<use xlink:href="img/icons/icons.svg#trashcan"></use>
+																</svg> 
 															</a>
 														</div>
 													</div>
@@ -198,10 +193,9 @@
 															<h5 class="price">€ 113 050</h5>
 															<button class="btn bordered">Details</button>
 															<a href="#" class="img-wrapper">
-																<img src="/img/icons/swiper/physics 1.svg" alt="">
-																<div class="compare">
-																	<div> Compare with other </div>
-																</div>
+																<svg width="16" height="18" fill="none">
+																	<use xlink:href="img/icons/icons.svg#trashcan"></use>
+																</svg> 
 															</a>
 														</div>
 													</div>
