--- a/sell-steper.html
+++ b/sell-steper.html
@@ -2,25 +2,25 @@
 <html lang="en">
 
 <head>
-   <title>Home</title>
-   <meta charset="UTF-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-   <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css" />
-   <link href="https://cdnjs.cloudflare.com/ajax/libs/slim-select/1.27.1/slimselect.min.css" rel="stylesheet">
-   </link>
-   <link rel="stylesheet" href="../node_modules/nouislider/dist/nouislider.css">
-   </link>
-   <link rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.min.css">
-   </link>
-   <link rel="stylesheet" href="css/style.css">
+	<title>Home</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css" />
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/slim-select/1.27.1/slimselect.min.css" rel="stylesheet">
+	</link>
+	<link rel="stylesheet" href="../node_modules/nouislider/dist/nouislider.css">
+	</link>
+	<link rel="stylesheet"
+		href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.min.css">
+	</link>
+	<link rel="stylesheet" href="css/style.css">
 </head>
 
 
 <body>
-   <div class="main-wrapper">
+	<div class="main-wrapper">
 <header class="header">
 	<div class="container-header">
 		<div class="wrapper">
@@ -49,35 +49,35 @@
 			</nav>
 		</div>
 	</div>
-</header>      <div class="content-wrapper">
-         <section class="sell-steper">
-            <div class="container">
-               <div class="steper-steps">
-                  <div class="breadcrumbs">
-                     <a href="">Home</a>
-                     <a href="" class="cur-page">Comparison</a>
-                  </div>
-                  <div class="steps-wrapper">
-                     <div class="step active">
-                        <p>1</p>
-                        <h5>Registration number</h5>
-                     </div>
-                     <div class="step complete">
-                        <p>2</p>
-                        <h5>Vehicle Information</h5>
-                     </div>
-                     <div class="step">
-                        <p>3</p>
-                        <h5>Contact Details</h5>
-                     </div>
-                     <div class="step">
-                        <p>4</p>
-                        <h5>Files</h5>
-                     </div>
-                  </div>
-               </div>
-               <div class="steper-content">
-                  <!-- <div class="content registration">
+</header>		<div class="content-wrapper">
+			<section class="sell-steper">
+				<div class="container">
+					<div class="steper-steps">
+						<div class="breadcrumbs">
+							<a href="">Home</a>
+							<a href="" class="cur-page">Comparison</a>
+						</div>
+						<div class="steps-wrapper">
+							<div class="step active">
+								<p>1</p>
+								<h5>Registration number</h5>
+							</div>
+							<div class="step complete">
+								<p>2</p>
+								<h5>Vehicle Information</h5>
+							</div>
+							<div class="step">
+								<p>3</p>
+								<h5>Contact Details</h5>
+							</div>
+							<div class="step">
+								<p>4</p>
+								<h5>Files</h5>
+							</div>
+						</div>
+					</div>
+					<div class="steper-content">
+						<!-- <div class="content registration">
                      <h2>Sell</h2>
                      <h4>Registration number</h4>
                      <div class="group control">
@@ -87,7 +87,7 @@
                      <p>If the bus not register in Sweden click skip button</p>
                      <a class="skip" href="#">Skip</a>
                   </div> -->
-                  <!-- <div class="content vehicle">
+						<!-- <div class="content vehicle">
                      <form action="">
                         <h2>Vehicle Information</h2>
                         <div class="group select">
@@ -172,7 +172,7 @@
                         </div>
                      </form>
                   </div> -->
-                  <!-- <div class="content contact">
+						<!-- <div class="content contact">
                      <form action="">
                         <h2>Contact Details</h2>
                         <div class="group control">
@@ -209,30 +209,29 @@
                         </div>
                      </form>
                   </div> -->
-                  <div class="content files">
-                     <h2>Sell</h2>
-                     <h4>Files</h4>
-                     <div class="group file">
-                        <label for="file">
-                           <img src="/img/icons/add_circle.svg" alt="">
-                           Select photos</label>
-                        <input id="file" type="file">
-                     </div>
-                     <div class="file-output">
-                     </div>
-                     <div class="captcha">
-                        <img src="/img/test-captcha.png" alt="">
-                     </div>
-                     <div class="btn-wrapper">
-                        <button class="btn bordered">Back</button>
-                        <button class="btn blue">Send</button>
-                     </div>
-                  </div>
-               </div>
-            </div>
-         </section>
-      </div>
-
+						<div class="content files">
+							<h2>Sell</h2>
+							<h4>Files</h4>
+							<div class="group file">
+								<label for="file">
+									<img src="/img/icons/add_circle.svg" alt="">
+									Select photos</label>
+								<input id="file" type="file">
+							</div>
+							<div class="file-output">
+							</div>
+							<div class="captcha">
+								<img src="/img/test-captcha.png" alt="">
+							</div>
+							<div class="btn-wrapper">
+								<button class="btn bordered">Back</button>
+								<button class="btn blue">Send</button>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+		</div>
 <footer class="footer">
    <div class="container">
       <div class="wrapper">
@@ -251,7 +250,7 @@
          </div>
       </div>
    </div>
-</footer>   </div>
+</footer>	</div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
 	integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"
@@ -289,7 +288,7 @@
 				slidesPerView: 4,
 				spaceBetween: 40,
 				slidesPerGroup: 4,
-			}
+			} 
 		}
 	});
 
@@ -308,7 +307,7 @@
 			clickable: true,
 		},
 	});
-
+	
 	var swiperSmall = new Swiper(".card-img-small", {
 		loop: true,
 		spaceBetween: 10,
@@ -328,6 +327,9 @@
 		},
 	});
 
-</script></body>
+</script>	<script>
+		document.querySelector('.group.file input').addEventListener('change', loadFile);
+	</script>
+</body>
 
 </html>
