--- a/comparison.html
+++ b/comparison.html
@@ -19,7 +19,7 @@
 	<div class="main-wrapper">
 <header class="header">
 	<div class="container-header">
-		<div class="wrapper">
+		<navbar class="navbar navbar-expand-lg navbar-light wrapper">
 			<div class="right-block">
 				<div class="logo">
 					<img src="/img/icons/logo.svg" alt="logo">
@@ -35,15 +35,21 @@
 						<a href="#"><img src="/img/icons/russia.svg" alt="russia-language"></a>
 					</div>
 				</div>
+				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+					aria-controls="navbarNav" aria-expanded="false">
+					<span class="navbar-toggler-icon"></span>
+				</button>
 			</div>
-			<nav class="nav-menu">
-				<a href="#" class="nav-link">Home</a>
-				<a href="#" class="nav-link">About</a>
-				<a href="#" class="nav-link">Autosearch</a>
-				<a href="#" class="nav-link">Sell</a>
-				<a href="#" class="nav-link">Contact</a>
-			</nav>
-		</div>
+			<div class="collapse navbar-collapse" id="navbarNav">
+				<div class="nav-menu navbar-nav">
+					<a href="#" class="nav-link">Home</a>
+					<a href="#" class="nav-link">About</a>
+					<a href="#" class="nav-link">Autosearch</a>
+					<a href="#" class="nav-link">Sell</a>
+					<a href="#" class="nav-link">Contact</a>
+				</div>
+			</div>
+		</navbar>
 	</div>
 </header>
 
@@ -344,7 +350,6 @@
 					</div>
 				</div>
 			</div>
-
 		</div>
 
 <footer class="footer">
@@ -445,7 +450,7 @@
 </script>	<script>
 		var comparisonCards = new Swiper('.comparison-cards', {
 			paginationClickable: true,
-			slidesPerView: 3,
+			slidesPerView: 1,
 			spaceBetween: 20,
 			allowTouchMove: true,
 			loop: false,
@@ -469,7 +474,7 @@
 
 		var comparisonData = new Swiper('.comparison-data', {
 			paginationClickable: true,
-			slidesPerView: 3,
+			slidesPerView: 1,
 			spaceBetween: 0,
 			allowTouchMove: true,
 			loop: false,
