--- a/comparison.html
+++ b/comparison.html
@@ -51,9 +51,7 @@
 			</div>
 		</navbar>
 	</div>
-</header>
-
-		<div class="content-wrapper">
+</header>		<div class="content-wrapper">
 			<div class="container">
 				<div class="breadcrumbs">
 					<a href="">Home</a>
@@ -351,7 +349,6 @@
 				</div>
 			</div>
 		</div>
-
 <footer class="footer">
    <div class="container">
       <div class="wrapper">
